2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_python.cc: Make 
	glom_evaluate_python_function_implementation() return a Value instead 
	of a string, and take a field type parameter.
	* glom/box_db_table.cc: Remove record_new().
	* glom/mode_data/box_data.cc: Rename record_new_from_entered() to 
	record_new() with an optional use_entered bool parameter, and use this 
	everywhere instead of record_new_from_entered. This means that the 
	first value entered in a new record in the list view will not be 
	forgotten. Also, this now sets the default value from calculations 
	where that is specified.

2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/: Added datawidget.[h|cc]: This widget can hold 
	either an EntryGlom or a checkbox, depending on the field type. Used 
	this in the Field Definition dialog and the FlowTableWithFields for the
	Details view.

2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/glomconversions: parse_value(): Return success 
	when parsing empty date, time, and numbers as nulls.
	* glom/mode_design/fields/dialog_fielddefinition.cc: 
	on_combo_lookup_relationship_changed(): Clear the list of fields 
	before adding more.
	* glom/utility_widgets/flowtablewithfields.cc: Add a checkbox instead 
	of an entryglom if it is a boolean field.

2004-07-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/navigation/box_tables.cc: fill_from_database(): make the window 
	bigger when in developer mode, because there is more to see.
	* glom/mode_design/fields/dialog_fielddefinition.[h|cc]: Use an 
	EntryGlom instead of an Entry for the default value, so that it gets 
	validated and internationalized and so that the value does not get 
	interpreted as a string. This should deal with NULL properly.
	* glom/utilty_widgets/entryglom.[h|cc]: Add methods to get and set 
	values so that code does not need to get the specific widget.
	* glom/data_structure/field.[h|cc]: Have both canonical and 